Update module to 4.0.22

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [extension]
 id="0"
 type="module"
-name="weblink"
-version="4.0.00"
+name="weblinks"
+version="4.0.22"
 
 [author]
 name="VINADES.,JSC"
