--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
+# Ignore some static files and directories.
 /.settings
 /.project
+/.htaccess
+/config.php
+/CHANGELOG.txt
+/COPYRIGHT.txt
+/CONTRIBUTING.md
+/README.md
+/favicon.ico
+/index.php
+/LICENSE.txt
+/robots.php
+/robots.txt
+/web.config
+/admin/
+/assets/
+/data/
+/includes/
+/install/
+/uploads/
+
+# Ignore fix module files and directories.
+/modules/*
+!/modules/weblinks
+!/modules/weblinks/*
+/themes/*
+!/themes/admin_default/css/weblinks.css
+!/themes/admin_default/js/weblinks.js
+!/themes/admin_default/images/weblinks
+!/themes/admin_default/images/weblinks/*
+!/themes/admin_default/modules/weblinks
+!/themes/admin_default/modules/weblinks/*
+!/themes/default/css/weblinks.css
+!/themes/default/js/weblinks.js
+!/themes/default/images/weblinks
+!/themes/default/images/weblinks/*
+!/themes/default/modules/weblinks
+!/themes/default/modules/weblinks/*
