--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ name="weblinks"
 version="4.5.00"
 
 [author]
-name="VINADES.,JSC"
-email="nukeviet.store@vinades.vn"
+name="VINADES"
+email="contact@vinades.vn"
 
 [note]
 text="Tạo danh bạ các website"
