Sửa giao diện nút chấp nhận trong quản trị

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 !/themes/default/images/weblinks/*
 !/themes/default/modules/weblinks
 !/themes/default/modules/weblinks/*
+/.github
+/LICENSE
+/api.php
