--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 [extension]
-id="26"
+id="0"
 type="module"
 name="weblinks"
 version="4.5.00"
 
 [author]
-name="VINADES"
+name="VINADES.,JSC"
 email="contact@vinades.vn"
 
 [note]
-text="Tạo danh bạ các website"
+text=""
